# netviser-backend

./: .gitignore  Dockerfile  Dockerfile.local  friday_1k.csv  ftp_patator_occurence.csv  pyproject.toml
.github/workflows/: google-cloudrun-docker-dev.yml  google-cloudrun-docker.yml
app/: main.py
app/configs/: config.py
app/middleware/: session_middleware.py
app/routes/: api.py
app/routes/attack_detection/: attack_detection_specific_route.py
app/routes/attack_visualization/: attack_visualization_routes.py
app/routes/xai/: xai_routes.py
app/schemas/: attack_visualization.py  overview_visualization.py  sample_files.py  upload.py
app/services/: bucket_service.py  gemini_service.py  input_handle_service.py  lambda_service.py  model_service.py  redis_service.py  s3_service.py  xai_service.py
app/utils/: attack_features.py  sample_files.py
model/: label_encoder.pkl  scaler.pkl
