[project]
name = "Netviser"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hamiz5401", email = "kittiporn132@gmail.com"},
]
dependencies = ["fastapi>=0.115.6", "pre-commit>=4.0.1", "uvicorn>=0.34.0", "sqlalchemy>=2.0.36"]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = 'uvicorn app.main:app --host 0.0.0.0 --reload --workers 4 --timeout-keep-alive 120'
stop = 'kill -9 $(lsof -i:8000)'
